# ray-challenges

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Particle.h
src/: Particle.cpp
